objects/Glossary_Item__c.object
<CustomObject>
    <description>TOOLKIT - used as a Glossary to capture the details of terms, assets, roles &amp; responsibilities, etc., and their details as they relate the project.</description>
    <fields>
        <fullName>Definition_Link__c</fullName>
        <description>Link to the official or a primary term definition reference. Allows a reference to an official source for greater clarity or drilling into greater details.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Link to the official or a primary term definition reference. Allows a reference to an official source for greater clarity or drilling into greater details.</inlineHelpText>
        <label>Definition Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Definition__c</fullName>
        <description>Short Definition of term (255 limit). 

Be aware that changing this to a LONG text field negates the ability to edit in a List View. This may limit Term management.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Short Definition of term (255 limit) 

Required for OFFICIAL Terms</inlineHelpText>
        <label>Definition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Details__c</fullName>
        <description>Used for any additional details or context</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used for any additional details or context</inlineHelpText>
        <label>Other Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to identify the relationship between a Primary terms, and its secondary counterparts</description>
        <inlineHelpText>Used to identify related Primary terms for common secondary terms</inlineHelpText>
        <label>Parent Term</label>
        <referenceTo>Glossary_Item__c</referenceTo>
        <relationshipName>Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Used to broadly identify the source of the term. 

Be aware that creating a Field Dependency on this field negates the ability to edit in a List View. This may limit Term management.</description>
        <inlineHelpText>Used to broadly identify the source of the term</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used by the Project Management to indicate which terms are adopted for official use on the project, over their related counterparts.

Be aware that creating a Field Dependency on this field negates the ability to edit in a List View. This may limit Term management.</description>
        <inlineHelpText>Used by the Project Management to indicate which terms are adopted for official use on the project, over their related counterparts.</inlineHelpText>
        <label>Project Usage Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Official</fullName>
                </value>
                <value>
                    <fullName>Unofficial</fullName>
                    <default>true</default>
                    <label>Unofficial</label>
                </value>
                <value>
                    <fullName>Discouraged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Glossary Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Term</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Role &amp; Responsibility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Usage_Type__c</fullName>
        <description>Used to differentiate between different term types. Facilitates searching and cross reference.

Be aware that creating a Field Dependency on this field negates the ability to edit in a List View. This may limit Term management.</description>
        <inlineHelpText>Used to differentiate between different term types. Facilitates searching and cross reference.</inlineHelpText>
        <label>Usage Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Name</fullName>
                </value>
                <value>
                    <fullName>Common Usage</fullName>
                </value>
                <value>
                    <fullName>Technical Name</fullName>
                </value>
                <value>
                    <fullName>Abbreviation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Glossary Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Usage_Type__c</columns>
        <columns>Definition__c</columns>
        <columns>Source__c</columns>
        <columns>Status__c</columns>
        <columns>Parent_Term__c</columns>
        <columns>Other_Details__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Asset</fullName>
        <columns>NAME</columns>
        <columns>Usage_Type__c</columns>
        <columns>Definition__c</columns>
        <columns>Source__c</columns>
        <columns>Status__c</columns>
        <columns>Parent_Term__c</columns>
        <columns>Other_Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Asset</value>
        </filters>
        <label>Asset Glossary</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Glossary Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Official_Term_Definition_Validation</fullName>
        <active>true</active>
        <description>Requires that Terms that have a &quot;Project Usage Status&quot; = &quot;Official&quot; require the &quot;Definition&quot; field to be completed.</description>
        <errorConditionFormula>ISBLANK( Definition__c ) &amp;&amp;  
TEXT (Status__c ) = &quot;Official&quot;</errorConditionFormula>
        <errorDisplayField>Definition__c</errorDisplayField>
        <errorMessage>If the &quot;Project Usage Status&quot; = &quot;Official&quot;, then the &quot;Definition&quot; field must be completed.</errorMessage>
    </validationRules>
</CustomObject>